--- a/WpfApp1/App.xaml
+++ b/WpfApp1/App.xaml
@@ -2,8 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfApp1"
+             xmlns:ViewModels="clr-namespace:WpfApp1.ViewModel;assembly=WpfApp1.ViewModel"
+             xmlns:Views="clr-namespace:WpfApp1.Views;assembly=WpfApp1.Views"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <!--ViewModel Mappings-->
+        <DataTemplate DataType="{x:Type ViewModels:StartViewModel}">
+            <Views:StartView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type ViewModels:SoraViewModel}">
+            <Views:SoraView />
+        </DataTemplate>
     </Application.Resources>
 </Application>
