--- a/WpfApp1.Views/StartView.xaml
+++ b/WpfApp1.Views/StartView.xaml
@@ -7,6 +7,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Image Source="pack://application:,,,/WpfApp1;component/Images/imhk.jpg" Width="540" Stretch="Uniform" />    
+        <StackPanel>
+            <Image Source="pack://application:,,,/WpfApp1;component/Images/imhk.jpg" Width="540" Stretch="Uniform" />
+            <TextBlock Text="이름: 임형구" HorizontalAlignment="Center"/>
+            <TextBlock Text="이메일: damansa1@naver.com" HorizontalAlignment="Center"/>
+        </StackPanel>
+           
     </Grid>
 </UserControl>
