--- a/WpfApp1/App.xaml
+++ b/WpfApp1/App.xaml
@@ -13,5 +13,8 @@
         <DataTemplate DataType="{x:Type ViewModels:SoraViewModel}">
             <Views:SoraView />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type ViewModels:UserViewModel}">
+            <Views:UserView />
+        </DataTemplate>
     </Application.Resources>
 </Application>
