첨부 프로퍼티 연습

--- a/WpfApp1/App.xaml
+++ b/WpfApp1/App.xaml
@@ -47,5 +47,13 @@
         <DataTemplate DataType="{x:Type ViewModels:CommandViewModel}">
             <Views:CommandView />
         </DataTemplate>
+
+        <DataTemplate DataType="{x:Type ViewModels:UserViewModel}">
+            <Views:UserView />
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type ViewModels:DependencyPropertyViewModel}">
+            <Views:DependencyPropertyTest />
+        </DataTemplate>
     </Application.Resources>
 </Application>
