--- a/WpfApp1.Views/ControlTemplateView.xaml
+++ b/WpfApp1.Views/ControlTemplateView.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Button Content="버튼" Height="30" HorizontalAlignment="Center"
                 Name="button" VerticalAlignment="Center" Width="75"
-                Click="button_Click">
+                Command="{Binding HelloCommand}">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Grid>
