--- a/WpfApp1.Views/UserView.xaml
+++ b/WpfApp1.Views/UserView.xaml
@@ -22,8 +22,9 @@
         <TextBlock Text="이름" />
         <TextBox Grid.Column="1" Text="{Binding User.Name}" />
         <TextBlock Grid.Row="1" Text="나이" />
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding User.Age}"
-                 Attached:MyTextbox.OnlyNumber="True"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding User.Age, UpdateSourceTrigger=PropertyChanged}"
+                 Attached:MyTextbox.OnlyNumber="True"
+                 Attached:MyTextbox.OnEnterKeyDown="{Binding SaveCommand}"/>
         <Controls:AddressControl Grid.Row="2" Grid.ColumnSpan="2" 
                                  Margin="0,0,0,5" Address="{Binding User.Address}"/>
         <Button Grid.Row="3" Grid.ColumnSpan="2" Command="{Binding SaveCommand}" Content="저장" />
