--- a/WpfApp1/App.xaml
+++ b/WpfApp1/App.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfApp1"
              xmlns:ViewModels="clr-namespace:WpfApp1.ViewModel;assembly=WpfApp1.ViewModel"
+             xmlns:DataModels="clr-namespace:WpfApp1.DataModels;assembly=WpfApp1.DataModels"
              xmlns:Views="clr-namespace:WpfApp1.Views;assembly=WpfApp1.Views"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
@@ -58,6 +59,29 @@
 
         <DataTemplate DataType="{x:Type ViewModels:AllUsersViewModel}">
             <Views:AllUsersView />
+        </DataTemplate>
+        
+        <!-- 사용자 템플릿 -->
+        <DataTemplate x:Key="UserTemplate" DataType="{x:Type DataModels:User}">
+            <Border BorderBrush="Black" BorderThickness="1" CornerRadius="5"
+                    Padding="5" Margin="0,0,0,5" Background="Black"
+                    TextElement.Foreground="White">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="{Binding Name}" />
+                    <TextBlock Text="{Binding Age, StringFormat={}({0}세)}" />
+                </StackPanel>
+            </Border>
+        </DataTemplate>
+
+        <DataTemplate x:Key="InverseUserTemplate" DataType="{x:Type DataModels:User}">
+            <Border BorderBrush="Black" BorderThickness="1" CornerRadius="5"
+            Padding="5" Margin="0,0,0,5" Background="White"
+            TextElement.Foreground="Black">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="{Binding Name}" />
+                    <TextBlock Text="{Binding Age, StringFormat={}({0}세)}" />
+                </StackPanel>
+            </Border>
         </DataTemplate>
     </Application.Resources>
 </Application>
