--- a/WpfApp1.Views/ControlTemplateView.xaml
+++ b/WpfApp1.Views/ControlTemplateView.xaml
@@ -4,21 +4,63 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp1.Views"
+             xmlns:CustomControls="clr-namespace:WpfApp1.CustomControls;assembly=WpfApp1.CustomControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <!-- 커스텀버튼 스타일 정의-->
+        <Style TargetType="{x:Type CustomControls:CustomButton}">
+            <Setter Property="Background" Value="LightGray" />
+            <Setter Property="Foreground" Value="Black" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type CustomControls:CustomButton}">
+                        <Border Background="{TemplateBinding Background}"
+                                BorderBrush="Black" BorderThickness="1"
+                                CornerRadius="5" Padding="10">
+                            <ContentPresenter HorizontalAlignment="Center"
+                                              VerticalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
     <Grid>
-        <Button Content="버튼" Height="30" HorizontalAlignment="Center"
+        <StackPanel>
+            <CustomControls:CustomButton Width="150" Height="50" HorizontalAlignment="Center"
+                                         
+                                         Content="커스텀 버튼" />
+            <Button Content="버튼" Height="30" HorizontalAlignment="Center"
                 Name="button" VerticalAlignment="Center" Width="75"
-                Command="{Binding HelloCommand}">
+                Command="{Binding HelloCommand}" Background="Yellow">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Grid>
-                        <Ellipse Fill="Yellow" Stroke="Red" />
+                        <Ellipse x:Name="ellipse" Fill="{TemplateBinding Background}" Stroke="Red" />
                         <ContentPresenter HorizontalAlignment="Center"
                                           VerticalAlignment="Center"/>
                     </Grid>
+                    <ControlTemplate.Triggers>
+                        <!--<Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="ellipse" Property="Fill" Value="Green" />
+                        </Trigger>
+
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="ellipse" Property="Fill" Value="Red" />
+                        </Trigger>-->
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsMouseOver" Value="True" />
+                                <Condition Property="IsPressed" Value="True" />
+
+                            </MultiTrigger.Conditions>
+                            <Setter TargetName="ellipse" Property="Fill" Value="Green" />
+                        </MultiTrigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Button.Template>
         </Button>
+        </StackPanel>
     </Grid>
 </UserControl>
