--- a/WpfApp1.Views/AllUsersView.xaml
+++ b/WpfApp1.Views/AllUsersView.xaml
@@ -5,10 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp1.Views"
              xmlns:Selectors="clr-namespace:WpfApp1.Views.Selectors"
+             xmlns:Converters="clr-namespace:WpfApp1.Converters;assembly=WpfApp1.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <Selectors:UserAgeSelector x:Key="UserAgeSelector" />
+        <Converters:HigherLowerConverter x:Key="HigherLowerConverter" />
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
