--- a/WpfApp1.Views/StartView.xaml
+++ b/WpfApp1.Views/StartView.xaml
@@ -4,12 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp1.Views"
+             xmlns:Converters="clr-namespace:WpfApp1.Converters;assembly=WpfApp1.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Converters:StringToFirstLetterConverter x:Key="StringToFirstLetterConverter" />
+    </UserControl.Resources>
     <Grid>
         <StackPanel>
             <Image Source="pack://application:,,,/WpfApp1;component/Images/imhk.jpg" Width="540" Stretch="Uniform" />
-            <TextBlock Text="이름: 임형구" HorizontalAlignment="Center"/>
+            <TextBlock Text="{Binding Name, Converter={StaticResource StringToFirstLetterConverter}}" HorizontalAlignment="Center"/>
             <TextBlock Text="이메일: damansa1@naver.com" HorizontalAlignment="Center"/>
         </StackPanel>
            
