--- a/WpfApp1/App.xaml
+++ b/WpfApp1/App.xaml
@@ -4,9 +4,13 @@
              xmlns:local="clr-namespace:WpfApp1"
              xmlns:ViewModels="clr-namespace:WpfApp1.ViewModel;assembly=WpfApp1.ViewModel"
              xmlns:DataModels="clr-namespace:WpfApp1.DataModels;assembly=WpfApp1.DataModels"
+             xmlns:Converters="clr-namespace:WpfApp1.Converters;assembly=WpfApp1.Converters"
              xmlns:Views="clr-namespace:WpfApp1.Views;assembly=WpfApp1.Views"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <!-- 컨버터 -->
+        <Converters:HigherLowerConverter x:Key="HigherLowerConverter" />
+
         <!--ViewModel Mappings-->
         <DataTemplate DataType="{x:Type ViewModels:StartViewModel}">
             <Views:StartView />
@@ -73,6 +77,14 @@
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="{Binding Name}" />
                     <TextBlock Text="{Binding Age, StringFormat={}({0}세)}" />
+                    <TextBlock>
+                        <TextBlock.Text>
+                            <MultiBinding Converter="{StaticResource HigherLowerConverter}">
+                                <Binding Path="Age" />
+                                <Binding Path="Age" RelativeSource="{RelativeSource PreviousData}" />
+                            </MultiBinding>
+                        </TextBlock.Text>
+                    </TextBlock>
                 </StackPanel>
             </Border>
         </DataTemplate>
