동영상플레이어

--- a/WpfApp1/App.xaml
+++ b/WpfApp1/App.xaml
@@ -69,6 +69,10 @@
             <Views:KBOView />
         </DataTemplate>
 
+        <DataTemplate DataType="{x:Type ViewModels:AvengersViewModel}">
+            <Views:AvengersView />
+        </DataTemplate>
+
         <!-- 사용자 템플릿 -->
         <DataTemplate x:Key="UserTemplate" DataType="{x:Type DataModels:User}">
             <Border BorderBrush="Black" BorderThickness="1" CornerRadius="5"
